<resources>
    <string name="app_name">HospitalSystem</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="user_details">User details</string>
    <string name="calls">Calls</string>
    <string name="tasks">Tasks</string>
    <string name="reports">Reports</string>
    <string name="attendance_leaving">Attendance - Leaving</string>
    <string name="employee">Employee</string>
    <string name="search_for_employee">Search for employee</string>
    <string name="new_user">New user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gander">Gander</string>
    <string name="specialist">Specialist</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="adress">Adress</string>
    <string name="ebrahem_elzainy">Abdullah A.Bendary</string>
    <string name="specialist_doctor">Specialist Doctor</string>
    <string name="male">Male</string>
    <string name="birth_date">29-09-1995</string>
    <string name="adress2">Cairo Shoubra</string>
    <string name="singel">Single</string>
    <string name="mail">abdullahbendary7@gmail.com</string>
    <string name="create_user">Create user</string>
    <string name="required">Required</string>
    <string name="login_error_message">Check your phone number and password</string>
    <string name="category">Category</string>
    <string name="send_call">Send Call</string>
    <string name="age">Age</string>
    <string name="create_call">Create Call</string>
    <string name="patient_name">Patient Name</string>
    <string name="phone">Phone</string>
    <string name="select_doctor">Select Doctor</string>

</resources>